# Backtester

./: .gitignore  CMakeLists.txt  README.md  main.py
include/data/: DataFeed.h  FileReader.h  FileWriter.h
include/engine/: Engine.h
include/strategy/: Indicator.h  MeanReversion.h  MovingAverageCrossover.h  Strategy.h
include/strategy/util/: BollingerBands.h  Signal.h
src/: Engine.cpp  Indicator.cpp  MeanReversion.cpp  MovingAverageCrossover.cpp  main.cpp
testData/: ABChourly.csv  AFGhourly.csv
